--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
 <head> V-Buck Generator</head>
+<h1> Free V-Bucks  </h1>
+<img src="https://github.com/Linson132/Computadora/blob/master/af5ec12b1a96848d9e99487e1c18ad9e.jpg" alt="">
+<table style="width:100%">
+  <tr>
+    <th>V-Bucks</th>
+    <th>Price</th>
+  
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>$20</td>
+  
+   
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>$22</td>
+    
+  </tr>
+  <tr>
+  <td>100</td>
+  <td>$50</td>
+  </tr>
+  <tr>
+  <td>250</td>
+  <td>$100</td>
+  <tr>
+    <td>500</td>
+    <td>$200</td>
+    </tr>
+    <tr>
+  <td>1k</td>
+  <td>First Born Child</td>
+  </tr>
+</table>
+<h1>Another Great Deal!</h1>
+
