--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <td>Four Origami Cranes Made Out Of One Dollar Bills</td>
   <tr>
     <td>500</td>
-    <td>Two Five Dollar Fill Ups-KFC</td>
+    <td>Two Five Dollar Fill-Ups KFC</td>
     </tr>
     <tr>
   <td>1k</td>
