--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
-<h1> Free V-Bucks  </h1>
-<img src="https://github.com/Linson132/Computadora/blob/master/af5ec12b1a96848d9e99487e1c18ad9e.jpg" alt="">
-<table style="width:100%">
-  <tr>
-    <th>V-Bucks</th>
-    <th>Price</th>
-  
-  </tr>
-  <tr>
-    <td>6</td>
-    <td>Three Pennies and A Wet Sock</td>
-  
-   
-  </tr>
-  <tr>
-    <td>9</td>
-    <td>Two Wet Socks</td>
-    
-  </tr>
-  <tr>
-  <td>100</td>
-  <td>Eight and Three Quarters Nickels</td>
-  </tr>
-  <tr>
-  <td>250</td>
-  <td>Four Origami Cranes Made Out Of One Dollar Bills</td>
-  <tr>
-    <td>500</td>
-    <td>Two Five Dollar Fill-Ups KFC</td>
-    </tr>
-    <tr>
-  <td>1,000</td>
-  <td>First Born Child</td>
-  </tr>
-</table>
-<h1>Another Great Deal!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
 
+<div class="container">
+  <h2>Bordered Table</h2>
+  <p>The .table-bordered class adds borders to a table:</p>            
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+</body>
+</html>
