--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 
 <div class="container">
-  <h2>Bordered Table</h2>
-  <p>The .table-bordered class adds borders to a table:</p>            
+  <h2>Free V-Bucks</h2>
+  <p>Totaly Not A Scam</p>            
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>Amount</th>
+        <th>Price</th>
+        <th>Gummy Bears</th>
       </tr>
     </thead>
     <tbody>
