--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
       <tr>
         <th>Amount</th>
         <th>Price</th>
-        <th>Gummy Bears</th>
+        <th> Included Gummy Bears</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>6</td>
+        <td>Three Pennies And A Wet Sock</td>
+        <td>10</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>100</td>
+        <td>Eight Five Dollar Fill-Ups</td>
+        <td>26</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>1,000</td>
+        <td>First Born Child</td>
+        <td>600</td>
       </tr>
     </tbody>
   </table>
