--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@
 
 </body>
 </html>
-<img src="
+<img src="https://github.com/Linson132/Computadora/blob/master/af5ec12b1a96848d9e99487e1c18ad9e.jpg" alt="">
