--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@
 </body>
 </html>
 <img src="https://github.com/Linson132/Computadora/blob/master/af5ec12b1a96848d9e99487e1c18ad9e.jpg" alt="">
+<imh style="width:100%>
